# parser_wb

./: .env-sample  README.md  pyproject.toml
config/: settings.py  urls.py
parser_wb/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
parser_wb/management/commands/: parser.py
parser_wb/migrations/: 0001_initial.py
parser_wb/templates/parser_wb/: product_list.html
static/css/: custom.css
static/js/: script.js
