[tool.poetry]
name = "parser-wb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.1"
django = "^5.2.3"
djangorestframework = "^3.16.0"
psycopg2-binary = "^2.9.10"
django-filter = "^25.1"
requests = "^2.32.4"
pandas = "^2.3.0"
retry = "^0.9.2"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.16.1"
isort = "^6.0.1"
flake8 = "^7.3.0"
pillow = "^11.2.1"
ipython = "^9.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
